--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">UFIT</string>
+    <string name="app_name">U-FIT</string>
+
     <string name="home">HOME</string>
     <string name="workout">WORKOUT</string>
     <string name="profile">PROFILE</string>
