--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,9 @@
     <string name="beginner">Beginner</string>
     <string name="novice">Novice</string>
     <string name="advanced">Advanced</string>
+
+    <!--Strings needed for playing YouTube videos-->
+    <string name="player_error">Error initializing YouTube player: %s</string>
+    <string name="seek_to">Jump To</string>
+    <string name="seek_to_hint">Seconds</string>
 </resources>
